Fix card descriptin container overflow

--- a/src/Components/Card.scss
+++ b/src/Components/Card.scss
@@ -18,4 +18,7 @@
         width: 100%;
         height: 70px;
     }
+    &__word-break {
+        word-break: break-word;
+    }
 }
